--- a/styles/main.css
+++ b/styles/main.css
@@ -70,8 +70,34 @@ img.next-image {
   color: #69778c;
 }
 
+/******************* MY CUSTOM CSS *******************/
+/* ul, ol {
+  margin-top: 0.5rem;
+} */
+
+* {
+  font-size: 18px;
+}
+
+.prose {
+  max-width: 54ch;
+}
+
+.subtitle {
+  font-size: 1rem;
+  font-style: italic;
+  color: #FACADE;
+  margin: -0.5rem 0 0 0.25rem;
+}
+
 @media screen and (min-width: 1024px) {
   * {
-    font-size: 18px;
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  * {
+    font-size: 22px;
   }
 }
