--- a/styles/main.css
+++ b/styles/main.css
@@ -86,7 +86,8 @@ img.next-image {
 .subtitle {
   font-size: 1rem;
   font-style: italic;
-  color: #FACADE;
+  color: #facade;
+  letter-spacing: 0.04rem;
   margin: -0.5rem 0 0 0.25rem;
 }
 
